<resources>
    <string name="app_name">ListNow</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Michael Scott</string>
    <string name="nav_header_subtitle">michael.scott@dmifflin.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_logout">Logout</string>
    <string name="drawer_new_list">New list</string>
    <string name="drawer_search">Search</string>
    <string name="login_app_name">List now!</string>
    <string name="login_sign_in_google">Sign in with Google</string>
    <string name="login_progress">Login progress</string>
    <string name="login_progress_loading">Loading, please wait.</string>
    <string name="home_label_1">You do not have any list</string>
    <string name="home_label_2">Let us begin!</string>
    <string name="home_new_list">New list</string>
    <string name="home_search">Search list</string>
    <string name="home_search_enter">Please! Enter id list</string>
    <string name="home_item_list_img_description">Item list</string>
    <string name="home_item_list_img_description_more">More actions</string>
    <string name="home_list_action_empty_copy">Empty copy</string>
    <string name="home_list_action_copy">Copy</string>
    <string name="home_list_action_share">Share</string>
    <string name="home_list_action_rename">Rename</string>
    <string name="home_list_action_completed">Completed</string>
    <string name="home_list_action_favorite">Favorite</string>
    <string name="home_list_action_delete">Delete</string>
    <string name="home_dialog_rename_title">Rename %s</string>
    <string name="home_dialog_rename_new_name">Enter new name</string>
    <string name="home_dialog_rename_new_name_please">Please! Enter new name</string>
    <string name="home_list_status_completed">Completed</string>
    <string name="home_list_status_pending">Pending</string>
    <string name="home_list_copy_added_to_name">copy</string>
    <string name="home_list_added">List added</string>
    <string name="home_list_not_foud">List not found</string>

    <string name="check_list_reject">Rejected! Please choose another</string>
    <string name="check_list_action_edit">Edit</string>
    <string name="check_list_action_reject">Reject</string>
    <string name="check_list_action_delete">Delete</string>

    <string name="new_list_empty">Add items to the list</string>
    <string name="new_item_name">Enter item name*</string>
    <string name="new_item_quantity">Quantity</string>
    <string name="new_item_unit">Unit</string>
    <string name="new_item_image_required">Image required</string>

    <string name="action_search_id">Enter list id</string>
    <string name="dialog_search_title">Search</string>
    <string name="search_success">List added successfully</string>
    <string name="search_fail">List not found</string>
    <string name="pick_image">Select an imaeg</string>
    <string name="uploading_image">Uploading …</string>
    <string name="uploaded_image">File uploaded</string>
    <string name="uploaded_image_error">Upload error</string>


    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_new_list">New List</string>
    <string name="title_activity_new_item">New Item</string>
    <string name="appwidget_text">List Now</string>
    <string name="widget_iv_check">item checked</string>
    <string name="button_upload_image">Upload image</string>
    <string name="check_item">Item selected</string>
    <string name="uncheck_item">Item not selected</string>
    <string name="add_item">Add item</string>


</resources>
